--- a/backend/package.json
+++ b/backend/package.json
@@ -3,18 +3,25 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.0.0",
+    "@babel/preset-env": "^7.2.0",
+    "eslint": "3.19.0",
+    "swagger2": "^1.0.4"
+  },
   "dependencies": {
-    "babel-cli": "^6.26.0",
+    "@babel/cli": "^7.0.0",
+    "babel-loader": "^8.0.4",
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
     "nodemon": "^1.18.9",
     "squel": "^5.12.2",
-    "swagger": "^0.7.5",
     "swagger2-koa": "^1.0.3"
   },
   "scripts": {
-    "start": "node src/index.js",
-    "start:dev": "nodemon --inspect src/index.js"
+    "start": "node --exec babel-node --dev src/index.js ",
+    "start:dev": "nodemon --inspect src/index.js --exec babel-node --dev"
   }
 }
