--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@babel/cli": "^7.0.0",
+    "@koa/cors": "^2.2.3",
     "babel-loader": "^8.0.4",
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
+    "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "nodemon": "^1.18.9",
     "pg": "^7.7.1",
+    "pg-async": "^3.1.0",
     "squel": "^5.12.2",
     "swagger2-koa": "^1.0.3"
   },
