--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,7 @@
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.0.0",
     "@babel/preset-env": "^7.2.0",
-    "eslint": "3.19.0",
-    "swagger2": "^1.0.4"
+    "eslint": "3.19.0"
   },
   "dependencies": {
     "@babel/cli": "^7.0.0",
@@ -22,6 +21,7 @@
     "pg": "^7.7.1",
     "pg-async": "^3.1.0",
     "squel": "^5.12.2",
+    "swagger2": "^1.0.4",
     "swagger2-koa": "^1.0.3"
   },
   "scripts": {
