--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -8,15 +8,15 @@ services:
       POSTGRES_PASSWORD: test
       POSTGRES_USER: test
     volumes:
-      - ./backend/src/queries/create.sql:/docker-entrypoint-initdb.d/create.sql
+      - ./../backend/src/queries/create.sql:/docker-entrypoint-initdb.d/create.sql
   backend:
     build:
-      context: ${PWD}/backend
-      dockerfile: ${PWD}/backend/dev.Dockerfile
+      context: ${PWD}/../backend
+      dockerfile: ${PWD}/../backend/dev.Dockerfile
     environment:
       BACKEND_URI: 3500
     ports:
       - "3500:3500"
     volumes:
-      - ${PWD}/backend:/app
+      - ${PWD}/../backend:/app
     command: "yarn start:dev"
