--- a/deployment/dev_dependency.docker-compose.yml
+++ b/deployment/dev_dependency.docker-compose.yml
@@ -3,12 +3,13 @@ services:
   postgres:
     image: postgres:9.6-alpine
     environment:
-      POSTGRES_PASSWORD: test
-      POSTGRES_USER: test
+      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
+      POSTGRES_USER: "${POSTGRES_USER}"
     volumes:
       - ./backend/src/queries/create.sql:/docker-entrypoint-initdb.d/create.sql
     networks:
       - fjcamillo_network
+      - shella_network
   nginx:
     image: jwilder/nginx-proxy
     volumes:
@@ -20,13 +21,17 @@ services:
       - "443:443"
     networks:
       - fjcamillo_network
+      - shella_network
   redis:
     image: redis:5.0.4-alpine
-    volumes:
-      - /app/redis/:/data
+    # volumes:
+    #   - /app/redis/:/data
     networks:
       - fjcamillo_network
+      - shella_network
 
 networks:
   fjcamillo_network:
     name: fjcamillo_networks
+  shella_network:
+    name: shella_networks
