--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "engines": {
+    "node": "8.x"
+  },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.0.0",
