--- a/deployment/dev.dependency.docker-compose.yml
+++ b/deployment/dev.dependency.docker-compose.yml
@@ -3,8 +3,8 @@ services:
   postgres:
     image: postgres:9.6-alpine
     environment:
-      POSTGRES_PASSWORD: "${DATABASE_PASSWORD}"
-      POSTGRES_USER: "${DATABASE_USER}"
+      POSTGRES_PASSWORD: test
+      POSTGRES_USER: test
     volumes:
       - ./../backend/src/queries/create.sql:/docker-entrypoint-initdb.d/create.sql
     networks:
