--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -1,33 +1,21 @@
-version: "2"
+version: "3"
 services:
-  postgres:
-    image: postgres:9.6-alpine
-    ports:
-      - "5432:5432"
-    environment:
-      POSTGRES_PASSWORD: test
-      POSTGRES_USER: test
-    volumes:
-      - ./backend/src/queries/create.sql:/docker-entrypoint-initdb.d/create.sql
   backend:
     build:
-      context: ${PWD}/backend
-      dockerfile: ${PWD}/backend/dev.Dockerfile
+      context: ${PWD}/../backend
+      dockerfile: ${PWD}/../backend/dev.Dockerfile
     environment:
-      BACKEND_URI: 3500
-      VIRTUAL_HOST: api.fjcamillo.com
+      BACKEND_PORT: ${BACKEND_PORT}
+      BACKEND_URI: ${BACKEND_URI}
+      VIRTUAL_HOST: dev-api.fjcamillo.com
     ports:
       - "3500:3500"
     volumes:
-      - ${PWD}/backend:/app
+      - ${PWD}/../backend:/app
     command: "yarn start:dev"
-  nginx:
-    image: jwilder/nginx-proxy
-    volumes:
-    - "/etc/nginx/vhost.d"
-    - "/usr/share/nginx/html"
-    - "/var/run/docker.sock:/tmp/docker.sock:ro"
-    restart: always
-    ports:
-      - "80:80"
-      - "443:443"
+    # networks:
+    
+networks:
+  default:
+    external:
+      name: fjcamillo_networks
