--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,8 @@
     "pg-async": "^3.1.0",
     "squel": "^5.12.2",
     "swagger2": "^1.0.4",
-    "swagger2-koa": "^1.0.3"
+    "swagger2-koa": "^1.0.3",
+    "winston": "^3.2.1"
   },
   "scripts": {
     "start": "node --exec babel-node --dev src/index.js ",
